# virtual_machines_homework

L1-memory/: .gitignore  CMakeLists.txt  main.cpp
iterative-interpreter/: .gitignore  CMakeLists.txt  Makefile  README.md
iterative-interpreter/include/: box.h  bytefile.h  gc.h  iterative_interpreter.h  runtime.h  runtime_common.h  stack.h
iterative-interpreter/performance/: Makefile
iterative-interpreter/regression/: Makefile  test002.bc  test003.bc  test004.bc  test005.bc  test006.bc  test007.bc  test008.bc  test009.bc  test010.bc  test011.bc  test012.bc  test013.bc  test014.bc  test015.bc  test016.bc  test017.bc  test018.bc  test019.bc  test020.bc  test021.bc  test022.bc  test023.bc  test024.bc  test025.bc  test026.bc  test027.bc  test028.bc  test111
iterative-interpreter/regression/deep-expressions/: Makefile
iterative-interpreter/regression/expressions/: Makefile
iterative-interpreter/src/: byterun.c  gc.c  iterative_interpreter.cpp  main.cpp  runtime.c
lama-in-graal-truffle/lama/: build.gradle.kts  gradle.properties  settings.gradle.kts
lama-in-graal-truffle/lama/src/main/kotlin/org/study/lama/: LamaLanguage.kt  Main.kt
lama-in-graal-truffle/lama/src/main/kotlin/org/study/lama/runtime/: LamaContext.kt
static-analyzer/: .gitignore  Makefile  README.md
static-analyzer/include/: byterun.h
static-analyzer/src/: byterun.c  main.cpp
